# relation

./: .gitignore  LICENSE  README.md  package.yaml  relation-test.tix  relation.cabal  stack.yaml
.github/workflows/: haskell.yml
src/Data/: Relation.hs
src/Data/Relation/: Both.hs  Class.hs  LTR.hs  Naive.hs  RTL.hs
src/Data/Relation/Internal/: Bare.hs  Both.hs  LTR.hs  RTL.hs
test/: Bench.hs  Common.hs
test/Data/Relation/: BothSpec.hs  LTRSpec.hs  Naive.hs  NaiveSpec.hs  RTLSpec.hs
