name:                relation
version:             0.1.0.0
synopsis:            Data structure for Many-to-Many relation
-- description:         
homepage:            https://github.com/minkless/relation#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Relation,
                       Data.Relation.Both,
                       Data.Relation.LTR,
                       Data.Relation.RTL
  other-modules:       Data.Relation.Internal.Bare,
                       Data.Relation.Internal.LTR,
                       Data.Relation.Internal.RTL,
                       Data.Relation.Internal.Both
  build-depends:       base >= 4.7 && < 5
                     , containers
  ghc-options:         -Wall -fwarn-redundant-constraints -O2
  default-language:    Haskell2010

test-suite relation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , relation
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
