name:                relation
version:             0.1.0.2
synopsis:            Data structure for Many-to-Many relation
homepage:            https://github.com/minkless/relation#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Data Structures
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Relation
      Data.Relation.LTR
      Data.Relation.Naive
  other-modules:
      Data.Relation.Internal.Bare
  build-depends: base >=4.9 && <5
               , containers >=0.5.10.1
               , deepseq
  ghc-options: -Wall -O2 -fwarn-redundant-constraints
  default-language: Haskell2010

test-suite relation-test
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is: Spec.hs
  other-modules:
      Data.Relation.LTRSpec
  build-depends: base
               , containers >=0.5.10.1
               , relation
               , QuickCheck
               , hspec
               , deepseq
  ghc-options: -Wall -O2 -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-tool-depends:
    hspec-discover:hspec-discover

benchmark relation-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Bench.hs
  build-depends: base
               , containers >=0.5.10.1
               , mwc-random
               , vector
               , primitive
               , deepseq
               , relation
               , gauge
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
